# llol

./: Main.hs  README.md  llol.cabal
src/: InteractionNet.hs  Lambda.hs  Main.hs  Sequent.hs  Test.hs  TestLambda.hs  TestSequent.hs
