name:                llol
version:             0.1.0.0
synopsis:            Low level optimal language
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     InteractionNet
  other-modules:       Sequent
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       morte >=1.6 && <1.7
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       llol,
                       hspec >=2.2.3 && <2.3,
                       morte >=1.6 && <1.7
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

