name:                llol
version:             0.1.0.0
synopsis:            Low level optimal language
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          phischu3000@googlemail.com
-- copyright:           
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     InteractionNet
  other-modules:       Sequent,
                       Lambda
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       containers >=0.5.7.1 && <0.6,
                       transformers >=0.5.2.0 && <0.6,
                       morte >=1.6 && <1.7,
                       text >=1.2.2.1 && <1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite test-interaction-net
  type:                exitcode-stdio-1.0
  main-is:             TestInteractionNet.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       containers >=0.5.7.1 && <0.6,
                       transformers >=0.5.2.0 && <0.6,
                       llol,
                       hspec >=2.2.3 && <2.3,
                       morte >=1.6 && <1.7,
                       text >=1.2.2.1 && <1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite test-sequent
  type:                exitcode-stdio-1.0
  main-is:             TestSequent.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       containers >=0.5.7.1 && <0.6,
                       transformers >=0.5.2.0 && <0.6,
                       llol,
                       hspec >=2.2.3 && <2.3,
                       morte >=1.6 && <1.7,
                       text >=1.2.2.1 && <1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010


test-suite test-lambda
  type:                exitcode-stdio-1.0
  main-is:             TestLambda.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <5.0,
                       containers >=0.5.7.1 && <0.6,
                       transformers >=0.5.2.0 && <0.6,
                       llol,
                       hspec >=2.2.3 && <2.3,
                       morte >=1.6 && <1.7,
                       text >=1.2.2.1 && <1.3
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

